crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__queue_site_paused.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: screen
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│No servers yet. Pr││  Name              Size   Modified   ││  Name              Size   Modified   │"
"│                  ││  ..                                  ││  ..                                  │"
"│                  ││  docs/                    09-29 06:00││  html/                    09-28 20:00│"
"│                  ││  src/                     09-28 10:00││  index.php           4.3K 09-28 22:00│"
"│                  ││  README.md           2.1K 09-29 10:00││  style.css          12.5K 09-28 22:00│"
"│                  ││  notes.txt            340 09-30 09:00││                                      │"
"│                  ││  big.iso             1.5G 08-24 00:00││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"└──────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (3, paused) │ Completed (2) │ Failed (1) │ Log │ Terminal ─────────────────────────────────┐"
"│  Local                 Remote                Progress        Done              Speed     ETA     │"
"│↑ …/projects/backup.tar /var/www/backup.tar   ████░░░░░░  44%       10.5M/23.8M    1.2M/s    0:12 │"
"│↑ …e/projects/index.php /var/www/index.php    waiting for you                                     │"
"│↓ …e/me/projects/photos /var/www/photos       queued                                              │"
"│                                                                                                  │"
"│Total 10.5M/24.8M · 1.2M/s · ETA 0:12 · PAUSED (p to resume)                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · F7 mkdir · F2 rename · F8 delete · g go to · . dotfiles · s sort · F1 help · q quit    "
