crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__small_help.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &plain)"
---
"┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"┌ Help ────────────────────────────────────────────────────────────────────────┐"
"│Everywhere                                                                    │"
"│Tab             focus the next area                                           │"
"│Shift-Tab       focus the previous area                                       │"
"│F1 ?            this help                                                     │"
"│Ctrl-r          refresh the focused pane                                      │"
"│Alt-1           bottom tab: Queue                                             │"
"│Alt-2           bottom tab: Completed                                         │"
"│Alt-3           bottom tab: Failed                                            │"
"│Alt-4           bottom tab: Log                                               │"
"│Alt-5           bottom tab: Terminal                                          │"
"│F9              show / hide the server tree                                   │"
"│F10             maximize / restore the bottom panel                           │"
"│q Ctrl-q        quit                                                          │"
"│File panes                                                                    │"
"│Up Down         move the cursor                                               │"
"│PgUp PgDn       page up / down                                                │"
"│Home End        first / last entry                                            │"
"│Enter           open a folder, or transfer a file to the other side           │"
"│                                                                              │"
"│Up/Down PgUp/PgDn scroll · Esc or F1 close                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · F7 mkdir · F2 rename · F8 delete · g go to · . dotfiles · s sort · "
