crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__small_host_key.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&small(&prompted), &prompted)"
---
"┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│  Name              Size   Modified   ││  Name              Size   Modified   │"
"│  ..                                  ││  ..                                  │"
"│  docs/                    09-29 06:00││  html/                    09-28 20:00│"
"│  src/                     09-28 10:00││  index.php           4.3K 09-28 22:00│"
"│  README.md           2.1K 09-29 10:00││  style.css          12.5K 09-28 22:00│"
"│  notes.txt            340 09-30 09:00││                                      │"
"│  big.iso             1.5G 08-24 00:00││                                      │"
"│   ┌ Unknown host key ────────────────────────────────────────────────────┐   │"
"│   │The authenticity of example.org:22 cannot be established.             │   │"
"│   │ssh-ed25519 key fingerprint:                                          │   │"
"│   │SHA256:uV3ZkP0xvQhmY1d1fGkTt6l4mqWb8rJwq0h5cG9nZ2A                    │   │"
"│   │                                                                      │   │"
"│   │y trust once · a trust always · n / Esc reject                        │   │"
"│   └──────────────────────────────────────────────────────────────────────┘   │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│            Nothing queued. Select files and press F5 to transfer.            │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · F7 mkdir · F2 rename · F8 delete · g go to · . dotfiles · s sort · "
