crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__small_site_editor.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &plain)"
---
"┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│  Name              Size   Modified   ││  Name              Size   Modified   │"
"│  ..                                  ││  ..                                  │"
"│  docs/                    09-29 06:00││  html/                    09-28 20:00│"
"│  src/ ┌ New site ────────────────────────────────────────────────────┐8 22:00│"
"│  READM│           Name:                                              │8 22:00│"
"│  notes│       Protocol: ‹ SFTP ›                                     │       │"
"│  big.i│           Host:                                              │       │"
"│       │           Port:                                              │       │"
"│       │           User:                                              │       │"
"│       │          Login: ‹ Password ›                                 │       │"
"│       │       Password:                                              │       │"
"│       │Remember secret: [ ]                                          │       │"
"│       │     Remote dir:                                              │       │"
"│       │      Local dir:                                              │       │"
"│       │          Notes:                                              │       │"
"└───────│                                                              │───────┘"
"┌ Queue │Tab next · Enter OK · Esc cancel                              │───────┐"
"│       │                                                              │       │"
"│       └──────────────────────────────────────────────────────────────┘       │"
"│            Nothing queued. Select files and press F5 to transfer.            │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · g go to · . dotfiles · s sort · F1 help · q quit                   "
